2008-11-25  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/Makefile.am: 
	- added scenedict.h to includes section
	- removed simulationserver.h from sources section

2008-11-24  Hedayat Vatankhah  <hedayat@grad.com>

	* configure.ac: 
	- removed NO_RPATH option.
	- using AS_HELP_STRING instead of AC_HELP_STRING
	
	* acinclude.m4: 
	- removed NO_RPATH option.
	
	* doc/Doxyfile.in: 
	- added spark/ to the input directories

2008-11-21  Hedayat Vatankhah  <hedayat@grad.com>

	* Makefile.am: 
	- README, NEWS and some other files will be installed with make install
	
	* configure.ac: 
	- fixed an issue with out of source builds, now it is possible to build
	  simspark in a separate directory.